RDM-13083: Update case validation - Check type of the new Document sub-fields